--- a/OpenEdXMobile/res/layout/panel_video_only_on_web.xml
+++ b/OpenEdXMobile/res/layout/panel_video_only_on_web.xml
@@ -22,10 +22,10 @@
         android:textColor="@color/white"
         android:textSize="@dimen/edx_small" />
 
-    <org.edx.mobile.view.custom.IconImageViewXml
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="@dimen/fa_x_large"
         android:layout_height="@dimen/fa_x_large"
-        app:iconColor="@color/primaryBaseColor"
-        app:iconName="fa-share-square-o" />
+        android:tint="@color/primaryBaseColor"
+        app:srcCompat="@drawable/ic_open_in_browser" />
 
 </LinearLayout>
