--- a/OpenEdXMobile/res/layout/fragment_course_unit_empty.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_unit_empty.xml
@@ -6,12 +6,12 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <org.edx.mobile.view.custom.IconImageViewXml
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="@dimen/unit_unavailable_error_icon_size"
         android:layout_height="@dimen/unit_unavailable_error_icon_size"
         android:layout_margin="@dimen/widget_margin_double"
-        app:iconColor="@color/neutralDark"
-        app:iconName="fa-list" />
+        android:tint="@color/neutralDark"
+        app:srcCompat="@drawable/ic_summarize" />
 
     <TextView
         android:layout_width="match_parent"
