--- a/OpenEdXMobile/res/layout/fragment_course_unit_only_on_youtube.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_unit_only_on_youtube.xml
@@ -7,12 +7,12 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <org.edx.mobile.view.custom.IconImageViewXml
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="@dimen/large_indicator_icon_width"
         android:layout_height="@dimen/large_indicator_icon_height"
         android:layout_margin="@dimen/edx_margin"
-        app:iconColor="@color/neutralXXDark"
-        app:iconName="fa-film" />
+        android:tint="@color/neutralXXDark"
+        app:srcCompat="@drawable/ic_videocam" />
 
     <TextView
         android:id="@+id/only_youtube_available_message"
