--- a/OpenEdXMobile/res/layout/fragment_payments_banner.xml
+++ b/OpenEdXMobile/res/layout/fragment_payments_banner.xml
@@ -58,22 +58,23 @@
                 tools:text="$99 USD" />
         </LinearLayout>
 
-        <org.edx.mobile.view.custom.IconImageViewXml
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/info"
             style="@style/edX.Widget.ActionBorderedButton"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/edx_half_margin"
             android:focusable="true"
+            android:paddingStart="@dimen/button_icon_horizontal_padding"
+            android:paddingEnd="@dimen/button_icon_horizontal_padding"
+            android:tint="@color/primaryBaseColor"
             android:visibility="gone"
-            app:iconColor="@color/primaryBaseColor"
-            app:iconName="fa-info-circle"
             app:layout_constraintBottom_toBottomOf="@+id/ll_upgrade_button"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ll_upgrade_button"
+            app:srcCompat="@drawable/ic_info"
             tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
