--- a/OpenEdXMobile/res/layout/fragment_user_profile.xml
+++ b/OpenEdXMobile/res/layout/fragment_user_profile.xml
@@ -56,12 +56,12 @@
                         android:visibility="gone"
                         tools:visibility="visible">
 
-                        <org.edx.mobile.view.custom.IconImageViewXml
+                        <androidx.appcompat.widget.AppCompatImageView
                             android:layout_width="@dimen/edx_x_small"
                             android:layout_height="@dimen/edx_x_small"
                             android:layout_marginEnd="@dimen/x_small_icon_margin"
-                            app:iconColor="@color/primaryBaseColor"
-                            app:iconName="fa-comment" />
+                            android:tint="@color/primaryBaseColor"
+                            app:srcCompat="@drawable/ic_language" />
 
                         <TextView
                             android:id="@+id/language_text"
@@ -82,12 +82,12 @@
                         android:visibility="gone"
                         tools:visibility="visible">
 
-                        <org.edx.mobile.view.custom.IconImageViewXml
+                        <androidx.appcompat.widget.AppCompatImageView
                             android:layout_width="@dimen/edx_x_small"
                             android:layout_height="@dimen/edx_x_small"
                             android:layout_marginEnd="@dimen/x_small_icon_margin"
-                            app:iconColor="@color/primaryBaseColor"
-                            app:iconName="fa-map-marker" />
+                            android:tint="@color/primaryBaseColor"
+                            app:srcCompat="@drawable/ic_place" />
 
                         <TextView
                             android:id="@+id/location_text"
