--- a/OpenEdXMobile/res/layout/loading_indicator.xml
+++ b/OpenEdXMobile/res/layout/loading_indicator.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <org.edx.mobile.view.custom.IconProgressBar
+    <ProgressBar
         android:id="@+id/loading_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
