--- a/OpenEdXMobile/res/layout/player_controller.xml
+++ b/OpenEdXMobile/res/layout/player_controller.xml
@@ -64,18 +64,17 @@
             android:textStyle="bold"
             tools:text="02:05" />
 
-        <com.joanzapata.iconify.widget.IconImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/settings"
             style="@style/video_player_bottom_control"
             android:contentDescription="@string/video_player_settings"
-            app:iconName="fa-cog" />
+            android:src="@drawable/ic_settings" />
 
-
-        <com.joanzapata.iconify.widget.IconImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/fullscreen"
             style="@style/video_player_bottom_control"
             android:contentDescription="@string/video_player_enter_fullscreen"
-            app:iconName="fa-compress" />
+            android:src="@drawable/ic_fullscreen_exit" />
     </LinearLayout>
 
     <!-- Put play/pause button to the center of player -->
@@ -85,13 +84,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
-        <com.joanzapata.iconify.widget.IconImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/prev"
             style="@style/video_player_side_control"
             android:layout_gravity="center_vertical|start"
             android:layout_marginStart="@dimen/video_player_control_left_margin"
             android:contentDescription="@string/video_player_previous"
-            app:iconName="fa-chevron-circle-left"
+            android:src="@drawable/ic_chevron_left"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -104,34 +103,34 @@
             app:layout_constraintEnd_toStartOf="@id/rewind"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.joanzapata.iconify.widget.IconImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/rewind"
             style="@style/video_player_side_control"
             android:background="@drawable/semi_transparent_gray_circle"
             android:contentDescription="@string/video_player_rewind_button"
-            app:iconName="fa-history"
+            android:src="@drawable/ic_history"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/pause"
             app:layout_constraintStart_toEndOf="@+id/prev"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.joanzapata.iconify.widget.IconImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/pause"
             style="@style/video_player_play_pause_button"
             android:contentDescription="@string/video_player_pause"
-            app:iconName="fa-pause"
+            android:src="@drawable/ic_pause"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.joanzapata.iconify.widget.IconImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/forward"
             style="@style/video_player_side_control"
             android:background="@drawable/semi_transparent_gray_circle"
             android:contentDescription="@string/video_player_forward_button"
             android:scaleX="-1"
-            app:iconName="fa-history"
+            android:src="@drawable/ic_history"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/next"
             app:layout_constraintStart_toEndOf="@+id/pause"
@@ -146,13 +145,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <com.joanzapata.iconify.widget.IconImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/next"
             style="@style/video_player_side_control"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="@dimen/video_player_control_right_margin"
             android:contentDescription="@string/video_player_next"
-            app:iconName="fa-chevron-circle-right"
+            android:src="@drawable/ic_chevron_right"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
