--- a/OpenEdXMobile/res/layout/row_course_card.xml
+++ b/OpenEdXMobile/res/layout/row_course_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/course_card_height"
@@ -51,7 +52,7 @@
             android:contentDescription="@string/share_course_button"
             android:padding="@dimen/edx_margin"
             android:scaleType="fitCenter"
-            android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
+            android:src="@drawable/ic_share"
             android:tint="@color/black"
             android:visibility="invisible"
             tools:visibility="visible" />
@@ -68,8 +69,8 @@
         android:focusableInTouchMode="false"
         android:scaleType="fitXY"
         android:src="@drawable/ic_media_play_inactive"
-        android:tint="@color/black"
         android:visibility="invisible"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        app:tint="@color/black" />
 
 </FrameLayout>
