--- a/OpenEdXMobile/res/layout/tab_item.xml
+++ b/OpenEdXMobile/res/layout/tab_item.xml
@@ -6,22 +6,22 @@
     android:gravity="center"
     android:orientation="horizontal">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@null"
-        tools:src="@drawable/ic_close" />
+        tools:src="@drawable/ic_campaign" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:paddingStart="@dimen/widget_margin_half"
         android:textAlignment="center"
         android:textColor="@color/primaryBaseColor"
         android:textSize="@dimen/edx_small"
-        android:maxLines="1"
-        android:ellipsize="end"
         tools:text="Title" />
 </LinearLayout>
