--- a/OpenEdXMobile/res/layout/fragment_authenticated_webview.xml
+++ b/OpenEdXMobile/res/layout/fragment_authenticated_webview.xml
@@ -34,7 +34,7 @@
             android:paddingEnd="@dimen/open_in_browser_text_horizontal_padding"
             android:paddingBottom="@dimen/open_in_browser_text_vertical_padding"
             android:textColor="@color/neutralXDark"
-            android:textSize="@dimen/edx_x_small"
+            android:textSize="@dimen/edx_small"
             android:visibility="gone"
             tools:text="@string/open_in_browser_message"
             tools:visibility="visible" />
