feat: add self-paced course dates events in calendar. - Add CTA (switch) with "add to calendar" message on the Course Dates page. - Show/Hide the message and CTA in the exist of Remote flags. - Ask user access read/write permission for calendar to perform CRUD operations. - Added course dates as events to the local mobile app calendar for every course separately. - Added analytics of the desired events fix: LEARNER-8320, LEARNER-8381

--- a/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
+++ b/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
@@ -11,12 +11,26 @@
         android:padding="@dimen/container_padding">
 
         <TextView
-            android:id="@+id/banner_info"
-            android:layout_width="wrap_content"
+            android:id="@+id/banner_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/neutralBlackT"
-            android:textSize="@dimen/edx_small"
-            tools:text="@string/course_dates_banner_reset_date" />
+            android:layout_marginBottom="@dimen/edx_half_margin"
+            android:fontFamily="?attr/fontSemiBold"
+            android:text="@string/course_schedule_title"
+            android:textColor="@color/primaryDarkColor"
+            android:textSize="@dimen/edx_large"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/banner_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="?attr/fontRegular"
+            android:lineSpacingMultiplier="@dimen/course_date_desc_line_spacing"
+            android:text="@string/course_dates_info_banner"
+            android:textColor="@color/neutralXDark"
+            android:textSize="@dimen/edx_x_small" />
 
         <!--  Use legacy text field instated of material-components-->
         <!--  Ref: https://medium.com/androiddevelopers/migrating-to-material-components-for-android-ec6757795351  -->
