--- a/OpenEdXMobile/res/layout/fragment_course_dates_page.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_dates_page.xml
@@ -33,6 +33,66 @@
                         android:visibility="gone"
                         tools:visibility="visible" />
 
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/sync_calendar_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/edx_margin"
+                        android:layout_marginTop="@dimen/widget_margin"
+                        android:layout_marginEnd="@dimen/edx_margin"
+                        android:layout_marginBottom="@dimen/edx_half_margin"
+                        android:visibility="gone"
+                        app:cardCornerRadius="@dimen/calendar_sync_card_corner_radius"
+                        app:cardElevation="@dimen/edx_quarter_margin"
+                        tools:visibility="visible">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:paddingStart="@dimen/edx_margin"
+                            android:paddingTop="@dimen/edx_margin"
+                            android:paddingEnd="@dimen/edx_margin"
+                            android:paddingBottom="@dimen/edx_margin">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:drawablePadding="@dimen/edx_half_margin"
+                                    android:fontFamily="?attr/fontSemiBold"
+                                    android:gravity="center_vertical"
+                                    android:text="@string/sync_to_calendar"
+                                    android:textColor="@color/primaryDarkColor"
+                                    android:textSize="@dimen/edx_medium"
+                                    app:drawableStartCompat="@drawable/ic_sync_alt" />
+
+                                <androidx.appcompat.widget.SwitchCompat
+                                    android:id="@+id/switch_sync"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="@dimen/calendar_sync_switch_widget_height"
+                                    app:theme="@style/Calendar.Sync.Switch"
+                                    app:trackTint="@color/switch_track_color" />
+                            </LinearLayout>
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/edx_half_margin"
+                                android:fontFamily="@font/inter_regular"
+                                android:lineSpacingMultiplier="@dimen/course_date_desc_line_spacing"
+                                android:text="@string/sync_to_calendar_message"
+                                android:textColor="@color/neutralXDark"
+                                android:textSize="@dimen/edx_x_small" />
+
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_dates"
                         android:layout_width="match_parent"
@@ -51,7 +111,9 @@
             android:id="@+id/loading_indicator"
             layout="@layout/loading_indicator" />
 
-        <include layout="@layout/content_error" />
+        <include
+            layout="@layout/content_error"
+            tools:visibility="gone" />
 
     </FrameLayout>
 </layout>
