In App Purchase Sample Code

--- a/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
+++ b/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
@@ -61,5 +61,12 @@
             android:visibility="gone"
             tools:text="@string/course_dates_banner_reset_date_button"
             tools:visibility="visible" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnBuy"
+            style="@style/edX.Widget.PrimaryActionButton"
+            android:padding="@dimen/edx_half_margin"
+            android:text="Buy Course" />
+
     </LinearLayout>
 </layout>
