--- a/OpenEdXMobile/res/values/labels.xml
+++ b/OpenEdXMobile/res/values/labels.xml
@@ -40,6 +40,10 @@
     <string name="label_do_not_allow">Don’t allow</string>
     <!-- Alert dialog View Event button -->
     <string name="label_view_events">View Events</string>
+    <!-- Alert dialog Update now button -->
+    <string name="label_update_now">Update Now</string>
+    <!-- Alert dialog remove course calendar button -->
+    <string name="label_remove_course_calendar">Remove Course Calendar</string>
     <!-- Done button label -->
     <string name="label_done">Done</string>
     <!-- Undo button label -->
